[package]
name = "sync-mailgun"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = '2018'

[dependencies]
curl = "0.4"
failure = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
env_logger = { version = "0.5", default-features = false }
rust_team_data = { git = "https://github.com/rust-lang/team" }
